# dacon_kt_prompt

./: GEPA_car.ipynb  pyproject.toml  test.py
data/: car_samples.csv
