[project]
name = "dacon-kt-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.31.0",
    "google-generativeai>=0.8.5",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
